--- a/Shika小鹿鹿全集/menu.html
+++ b/Shika小鹿鹿全集/menu.html
@@ -9,6 +9,11 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/Shika%E5%B0%8F%E9%B9%BF%E9%B9%BF---%E5%B9%BD%E7%81%B5%E5%A8%9830P-268M-08-20">Shika小鹿鹿 - 幽灵娘[30P-268M]</a></p>
+  <p><a href="https://telegra.ph/Shika%E5%B0%8F%E9%B9%BF%E9%B9%BF---%E9%80%B8%E4%BB%99-%E5%87%A4%E5%86%A0%E9%9C%9E%E5%B8%94-27P-272MB%E6%B1%89%E6%9C%8D-08-21">Shika小鹿鹿 - 逸仙 凤冠霞帔 [27P-272MB](汉服)</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
