--- a/可可小白兔全集/menu.html
+++ b/可可小白兔全集/menu.html
@@ -9,12 +9,11 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787---%E5%A5%B3%E4%BB%86%E8%87%AA%E6%8B%8D-24P3V-233M-08-19">末夜787 - 女仆自拍 [24P3V-233M]</a></p> 
-  <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787---95%E5%BC%8F%E5%A9%9A%E7%BA%B1-34P-634MB-08-21">末夜787 - 95式婚纱 [34P-634MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%8F%AF%E5%8F%AF%E5%B0%8F%E7%99%BD%E5%85%94-%E9%9B%BB%E8%BB%8A%E4%B8%8A%E3%81%AE%E5%A5%B3%E9%AB%98%E4%B8%AD%E7%94%9F-08-21">可可小白兔 電車上の女高中生</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
