--- a/封疆疆全集/menu.html
+++ b/封疆疆全集/menu.html
@@ -17,8 +17,8 @@
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E9%A3%9E%E4%BA%91%E7%BE%8E%E8%B6%B3-36P76MB-08-20">封疆疆 - 飞云美足 36P76MB</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E9%98%AE%E6%A2%85-32P-419MB-08-20">封疆疆 - 阮梅 [32P-419MB]</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86v---NIKKE-%E7%99%BD%E5%85%94%E5%B8%83%E5%85%B0%E5%84%BF-%E5%92%8C%E6%9C%8D-40P-481MB-08-20">封疆疆v - NIKKE 白兔布兰儿 和服 [40P-481MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E5%B0%8F%E6%81%B6%E9%AD%94-30P-316MB-08-21">封疆疆 - 小恶魔 [30P-316MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6-%E5%A5%B3%E4%BB%86-28P-312MB-08-21">封疆疆 - 飞鸟马时 女仆 [28P-312MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
