--- a/麻花酱全集/menu.html
+++ b/麻花酱全集/menu.html
@@ -18,5 +18,11 @@
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E5%A5%B3%E4%BB%86%E5%90%88%E9%9B%86%E4%BA%8C-81P2V-115GB-08-20">麻花酱 - 女仆合集二 [81P2V-1.15GB]</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E5%A7%90%E5%A7%90%E7%B3%BB%E5%88%97-134P5V-22G-08-20">麻花酱 - 姐姐系列 [134P+5V-2.2G]</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E4%B8%87%E5%9C%A3%E8%8A%82%E9%AD%94%E5%A5%B3-117P6V-233GB-08-20">麻花酱 - 万圣节魔女 [117P6V 2.33GB]</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E6%86%A7%E6%86%AC%E6%88%90%E4%B8%BA%E9%AD%94%E6%B3%95%E5%B0%91%E5%A5%B3-%E6%9F%8A%E8%88%9E%E7%BC%87%E5%A8%9C-40P2V-549MB-08-21">麻花酱 - 憧憬成为魔法少女 柊舞缇娜 [40P2V-549MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
