--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -35,6 +35,15 @@
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E4%B8%87%E5%9C%A3%E8%8A%82%E7%89%B9%E8%BE%91-%E9%AD%94%E5%A5%B3%E7%8B%82%E6%AC%A2%E5%A4%9C-133P1V-947MB-08-20">玉汇 - 万圣节特辑 魔女狂欢夜 [133P1V-947MB]</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---24-Vol28-%E6%9F%B3%E5%A6%82%E7%83%9F%E7%BB%88%E7%AB%A0-%E5%9B%9A-133p1v-08-20">玉汇 - 24-Vol.28 柳如烟终章-囚 133p+1v</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E7%8B%AC%E5%B1%85%E7%9A%84%E5%AF%A1%E5%A7%90--132P1V-%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-20">玉汇 - 独居的寡姐 [ 132P+1V ]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E4%BD%93%E6%93%8D%E5%AD%A6%E5%A6%B9-44P2V-448MB-08-21">玉汇 - 体操学妹 [44P2V-448MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E9%80%8F%E6%98%8E%E5%AD%A6%E5%A7%90-39P-207MB-08-21">玉汇 - 透明学姐 [39P-207MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E4%BD%93%E8%B4%B4%E7%9A%84%E7%A7%98%E4%B9%A6-37P-216MB-08-21">玉汇 - 体贴的秘书 [37P-216MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E8%83%8C%E5%B8%A6%E8%A3%A4%E5%A6%B9%E5%A6%B9-41P1V-210MB-08-21">玉汇 - 背带裤妹妹 [41P1V-210MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E8%93%9D%E7%99%BD%E6%9D%A1%E5%B0%91%E5%A5%B3-81P-807MB-08-21">玉汇 - 蓝白条少女 [81P-807MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E6%B0%B4%E4%B8%AD%E8%8A%B1-79P-482MB-08-21">玉汇 - 水中花 [79P-482MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E7%97%B4%E5%A5%B3%E6%97%A5%E8%AE%B0-104P-098GB-08-21">玉汇 - 痴女日记 [104P-0.98GB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
