--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -24,10 +24,10 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E9%95%BF%E7%A6%BB-30P-1V-08-20">九言 - 长离 30P 1V</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E5%90%BE%E5%A6%BB-08-20">九言 - 吾妻</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E4%B8%9C%E9%A3%8E%E8%88%9E%E5%B8%8C2-50p1v-08-20">九言 - 东风舞希2 50p1v</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E5%A4%A9%E5%9F%8E%E7%8E%89%E5%BA%A7%E8%90%BD%E9%B8%9E-08-21">九言 - 天城.玉座落鸞</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E6%9D%9C%E5%85%B0%E5%BE%B7%E5%B0%94-08-21">九言 杜兰德尔</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%B2%88%E5%A6%99%E6%B3%B3%E8%A3%85-08-21">九言 - 沈妙泳装</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%9F%B4%E9%83%A1%E9%83%A1-08-21">九言 - 柴郡郡</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
