--- a/咬一口兔娘全集/menu.html
+++ b/咬一口兔娘全集/menu.html
@@ -52,6 +52,16 @@
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---10%E6%9C%88%E4%BD%9C%E5%93%81%E6%88%98%E6%96%97%E5%A5%B3%E4%BB%8676P1V-%E5%8A%A8%E6%84%9F%E5%85%89%E6%B3%A2-08-20">咬一口兔娘 - 10月作品『战斗女仆』76P+1V 动感光波</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---10%E6%9C%88%E4%BD%9C%E5%93%81%E7%BB%9D%E5%8C%BA%E9%9B%B6-%E7%8C%AB%E5%AE%AB%E5%8F%88%E5%A5%8874P1V-ROLY-POLY-08-20">咬一口兔娘 - 10月作品『绝区零-猫宫又奈』74P+1V ROLY POLY</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---10%E6%9C%88%E4%BD%9C%E5%93%81%E9%9B%A8%E5%90%8E%E5%B0%8F%E6%95%85%E4%BA%8B89P1V-08-20">咬一口兔娘 - 10月作品『雨后小故事』89P+1V</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---9%E6%9C%88%E6%9C%88%E7%A5%A8%E7%89%B9%E5%85%B8%E5%AE%85%E5%AE%B6%E8%90%8C%E5%A6%B941P1V-Bunny-Style-08-21">咬一口兔娘 - 9月月票特典『宅家萌妹』41P+1V Bunny Style</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---9%E6%9C%88%E4%BD%9C%E5%93%81%E6%8D%95%E8%8E%B7%E6%B0%B4%E6%89%8B%E6%9C%8D76P1V-%E5%B0%8F%E5%89%A7%E5%9C%BA-08-21">咬一口兔娘 - 9月作品『捕获水手服』76P+1V 小剧场</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98-9%E6%9C%88%E4%BD%9C%E5%93%81%E6%98%8E%E6%97%A5%E9%A6%99%E7%89%B9%E6%AE%8A%E4%BD%9C%E6%88%9881P1V-%E6%8B%BE%E5%85%89%E7%8B%AC%E7%99%BD-08-21">咬一口兔娘 9月作品『明日香特殊作战』81P+1V 拾光独白</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98-9%E6%9C%88%E4%BD%9C%E5%93%81%E6%A2%A6%E4%B8%AD%E7%9A%84%E5%A9%9A%E7%A4%BC72P1V-%E5%8B%BE%E6%8C%87%E8%B5%B7%E8%AA%93-08-21">咬一口兔娘 9月作品『梦中的婚礼』72P+1V 勾指起誓</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98-9%E6%9C%88%E4%BD%9C%E5%93%81%E5%A6%AE%E5%8F%AF%E4%B8%89%E7%99%BE%E7%AA%9F130P1V-Shake-it-08-21">咬一口兔娘 9月作品『妮可三百窟』130P+1V Shake it</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 			
