--- a/奈汐酱nice全集/menu.html
+++ b/奈汐酱nice全集/menu.html
@@ -30,7 +30,11 @@
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---50%E5%8F%B7%E5%AF%B9%E8%81%94%E5%B9%B4-55p3v-08-20">奈汐酱nice - 50号对联年 55p3v</a></p>
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E8%B5%A4%E5%B8%90%E8%88%9E-67P2V-877MB-%E6%B1%89%E6%9C%8D-08-20">奈汐酱nice - 赤帐舞 [67P2V-877MB] (汉服)</a></p>
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E9%BB%91%E7%A5%9E%E8%AF%9D%E6%82%9F%E7%A9%BA-%E4%BA%A2%E9%87%91%E9%BE%99-80P1V-08-20">奈汐酱nice - 黑神话悟空 亢金龙 80P1V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83%E5%A5%88%E6%B1%90%E9%85%B1nice-%E9%9D%92%E6%A5%BC%E9%9F%B5%E4%BA%8B-120P1V-122GB-08-21">云溪溪 - &奶桃&奈汐酱nice 青楼韵事 [120P1V-1.22GB]</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E4%B8%8E%E6%A2%A6-63P-105GB-08-21">奈汐酱nice - 与梦</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E8%9C%98%E8%9B%9B%E7%B2%BE-%E5%9B%9B%E5%A6%B9-86P1V-488MB-08-21">奈汐酱nice - 蜘蛛精 四妹 [86P1V-488MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E9%86%89%E5%9B%9E%E7%8B%AC%E5%B1%85-65P1V-127GB-08-21">奈汐酱nice - 醉回独居 [65P1V-1.27GB]</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E5%8F%A4%E9%A3%8E%E9%9D%92%E7%BA%B1%E6%9B%A6-70P-127GB%E6%B1%89%E6%9C%8D-08-21">奈汐酱nice - 古风青纱曦 [70P-1.27GB](汉服)</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
