--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -39,6 +39,12 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---NIKKE-%E6%AF%92%E8%9B%87-52P-766MB-08-20">水淼aqua - NIKKE 毒蛇 [52P-76.6MB]</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---NIKKE-%E7%BD%97%E7%8F%8A%E5%A8%9C-60P-789MB-08-20">水淼aqua - NIKKE 罗珊娜 [60P-78.9MB]</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---Aqua-Summer-75P-140MB-08-20">水淼aqua - Aqua Summer 75P 140MB</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua---%E3%83%95%E3%82%A1%E3%82%A4%E3%83%8A%E3%83%AB%E3%83%95%E3%82%A1%E3%83%B3%E3%82%BF%E3%82%B8%E3%83%BCVII-%E3%83%86%E3%82%A3%E3%83%95%E3%82%A1%E3%83%AD%E3%83%83%E3%82%AF%E3%83%8F%E3%83%BC%E3%83%88-81P-110MB-08-21">水淼Aqua - ファイナルファンタジーVII　ティファ・ロックハート [81P-110MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---%E3%82%BC%E3%83%B3%E3%83%AC%E3%82%B9%E3%82%BE%E3%83%B3%E3%82%BC%E3%83%AD-%E3%83%8B%E3%82%B3%E3%83%87%E3%83%9E%E3%83%A9-66P-811MB-08-21">水淼aqua - ゼンレスゾンゼロ　ニコ・デマラ [66P-81.1MB]</a></p>
+<p><a href="../index.html">返回总目录</a></p>
+<p><a href="../index.html">返回总目录</a></p>
+<p><a href="../index.html">返回总目录</a></p>
+<p><a href="../index.html">返回总目录</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 <p><a href="../index.html">返回总目录</a></p>
