--- a/洛洛子全集/menu.html
+++ b/洛洛子全集/menu.html
@@ -15,5 +15,11 @@
   <p><a href="https://telegra.ph/%E6%B4%9B%E6%B4%9B%E5%AD%90---%E6%B0%B4%E8%89%B2%E7%8C%AB%E7%8C%AB%E5%A4%B4-08-20">洛洛子 - 水色猫猫头</a></p>
   <p><a href="https://telegra.ph/%E6%B4%9B%E6%B4%9B%E5%AD%90---%E6%B8%85%E7%BA%AF%E7%B3%BB%E9%BB%91%E9%95%BF%E7%9B%B4-49p-08-20">洛洛子 - 清纯系黑长直 49p</a></p>
   <p><a href="https://telegra.ph/%E6%B4%9B%E6%B4%9B%E5%AD%90---%E6%8B%98%E6%9D%9F%E9%93%B6%E7%8B%90-50p-08-20">洛洛子 - 拘束银狐 50p</a></p>
+  <p><a href="https://telegra.ph/%E6%B4%9B%E6%B4%9B%E5%AD%90---%E5%B1%85%E5%AE%B6%E5%A5%B3%E5%8F%8B-24P-306MB-08-21">洛洛子 - 居家女友 [24P-30.6MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B4%9B%E6%B4%9B%E5%AD%90---%E6%9C%88%E4%B9%8B%E4%BC%8A%E5%B8%83-45P-571MB-08-21">洛洛子 - 月之伊布 [45P-571MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B4%9B%E6%B4%9B%E5%AD%90---%E5%A5%B3%E4%BB%86%E5%A4%A9%E4%BD%BF-%E9%99%90%E5%AE%9A-40P-325MB-08-21">洛洛子 - 女仆天使 限定 [40P-325MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
