--- a/海克斯科技全集/menu.html
+++ b/海克斯科技全集/menu.html
@@ -9,13 +9,18 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92---%E7%99%BD%E5%A4%A9%E9%B9%85%E5%A4%96%E5%8D%96-93P-1G-08-19">小和甜酒 - 白天鹅外卖 [93P-1G]</a></p> 
-  <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92%E6%A9%99%E9%A3%8E%E5%8D%83%E9%9B%85-%E9%AD%94%E5%A5%B3%E7%8C%AB%E5%92%AA-118P-751MB-08-21">小和甜酒&橙风千雅 魔女猫咪 [118P-751MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B5%B7%E5%85%8B%E6%96%AF%E7%A7%91%E6%8A%80---%E6%98%9F%E6%9C%9F%E4%B8%80%E7%9A%84%E5%A5%B6%E7%89%9B-29P-08-21">海克斯科技 - 星期一的奶牛 29P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
