--- a/阿包也是兔娘全集/menu.html
+++ b/阿包也是兔娘全集/menu.html
@@ -11,5 +11,9 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E9%98%BF%E5%8C%85%E4%B9%9F%E6%98%AF%E5%85%94%E5%A8%98---%E7%8B%82%E4%B8%89-36p-08-19">阿包也是兔娘 - 狂三 36p</a></p>
   <p><a href="https://telegra.ph/%E9%98%BF%E5%8C%85%E4%B9%9F%E6%98%AF%E5%85%94%E5%A8%98---%E5%B0%BE%E5%BC%A0-42p-08-20">阿包也是兔娘 - 尾张 42p</a></p>
+  <p><a href="https://telegra.ph/%E9%98%BF%E5%8C%85%E4%B9%9F%E6%98%AF%E5%85%94%E5%A8%98---%E6%97%A0%E6%9C%9F%E8%BF%B7%E9%80%94-%E5%8F%AF%E5%8F%AF%E8%8E%89%E5%85%8B-29P-286MB-08-21">阿包也是兔娘 - 无期迷途 可可莉克 [29P-286MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
