--- a/雪晴Astra全集/menu.html
+++ b/雪晴Astra全集/menu.html
@@ -23,5 +23,15 @@
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---2024%E4%B8%87%E5%9C%A3%E8%8A%82-%E6%8A%A4%E5%A3%AB%E5%88%BB%E6%99%B4-61P-4V-08-20">雪晴Astra - 2024万圣节 护士刻晴 61P 4V (原神)</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4-24%E4%B8%87%E5%9C%A3%E8%8A%82-%E6%9F%B4%E9%83%A1%E9%AD%94%E6%9C%AF%E5%B8%88-08-20">雪晴 24万圣节 柴郡魔术师</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E5%A4%A7%E5%87%A4-%E9%A3%8E%E7%BA%AA%E5%A7%94%E5%91%9880P-933M-08-20">雪晴Astra - 碧蓝航线 大凤 风纪委员[80P-933M]</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---2023%E5%9C%A3%E8%AF%9E%E8%8A%82-%E9%AD%94%E5%A5%B3-81P3V-179GB-08-21">雪晴Astra - 2023圣诞节 魔女 [81P3V-1.79GB]</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E5%88%BB%E6%99%B4%E6%81%B6%E9%AD%94%E6%8B%98%E6%9D%9F%E7%9D%A1%E8%A1%A3-20P4V-349MB-08-21">雪晴Astra - 刻晴恶魔拘束睡衣 [20P4V-349MB]</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---2024%E6%98%A5%E5%AD%A3%E9%99%90%E5%AE%9A-%E9%80%8F%E6%98%8E%E5%A5%B3%E4%BB%86-71P2V-195GB-08-21">雪晴Astra - 2024春季限定 透明女仆 [71P2V-1.95GB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
