--- a/可可小白兔全集/menu.html
+++ b/可可小白兔全集/menu.html
@@ -10,7 +10,7 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%8F%AF%E5%8F%AF%E5%B0%8F%E7%99%BD%E5%85%94-%E9%9B%BB%E8%BB%8A%E4%B8%8A%E3%81%AE%E5%A5%B3%E9%AB%98%E4%B8%AD%E7%94%9F-08-21">可可小白兔 電車上の女高中生</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%8F%AF%E5%8F%AF%E5%B0%8F%E7%99%BD%E5%85%94---%E7%A4%BC%E7%89%A9%E4%BD%93%E6%93%8D%E6%9C%8D%E5%B0%91%E5%A5%B3-35P-08-21">可可小白兔 - 礼物体操服少女 35P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
