--- a/麻花酱全集/menu.html
+++ b/麻花酱全集/menu.html
@@ -19,10 +19,10 @@
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E5%A7%90%E5%A7%90%E7%B3%BB%E5%88%97-134P5V-22G-08-20">麻花酱 - 姐姐系列 [134P+5V-2.2G]</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E4%B8%87%E5%9C%A3%E8%8A%82%E9%AD%94%E5%A5%B3-117P6V-233GB-08-20">麻花酱 - 万圣节魔女 [117P6V 2.33GB]</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E6%86%A7%E6%86%AC%E6%88%90%E4%B8%BA%E9%AD%94%E6%B3%95%E5%B0%91%E5%A5%B3-%E6%9F%8A%E8%88%9E%E7%BC%87%E5%A8%9C-40P2V-549MB-08-21">麻花酱 - 憧憬成为魔法少女 柊舞缇娜 [40P2V-549MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6-32P1V-429MB-08-21">麻花酱 - 蔚蓝档案 飞鸟马时 [32P1V-429MB]</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E7%94%9F%E5%8C%96%E5%8D%B1%E6%9C%BA-%E8%89%BE%E8%BE%BE%E7%8E%8B-38P1V-515MB-08-21">麻花酱 - 生化危机 艾达王 [38P1V-515MB]</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E9%AC%BC%E7%81%AD%E4%B9%8B%E5%88%83-%E7%94%98%E9%9C%B2%E5%AF%BA-22P1V-395MB-08-21">麻花酱 - 鬼灭之刃 甘露寺 [22P1V-395MB]</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E5%9F%83%E5%90%89%E5%B0%94-28P1V-439MB-08-21">麻花酱 - 碧蓝航线 埃吉尔 [28P1V-439MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
