--- a/rioko凉凉子全集/menu.html
+++ b/rioko凉凉子全集/menu.html
@@ -15,5 +15,12 @@
   <p><a href="https://telegra.ph/rioko%E5%87%89%E5%87%89%E5%AD%90---Nikke%E8%83%9C%E5%88%A9%E5%A5%B3%E7%A5%9E-%E6%A2%85%E7%99%BB%E5%86%B0%E7%8E%AB%E7%91%B0-08-19">rioko凉凉子 - Nikke胜利女神 梅登冰玫瑰</a></p>  
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90---%E5%9F%83%E5%90%89%E5%B0%94%E5%B1%85%E5%AE%B6%E7%89%88-08-20">凉凉子 - 埃吉尔居家版</a></p>
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90---%E5%A4%A7%E9%B8%AD%E9%B8%AD-50p-12v-08-20">凉凉子 - 大鸭鸭 50p 12v</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90---KPring%E5%A6%88%E5%92%AA%E5%8E%9F%E5%88%9B%E8%AE%BE%E8%AE%A1-%E9%82%BB%E5%B1%85%E5%AE%B6%E7%9A%84%E5%A4%A7%E5%A7%90%E5%A7%90-60P11V-992MB-08-21">凉凉子 - KPring妈咪原创设计 邻居家的大姐姐 [60P11V-992MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E5%9C%A3%E5%A7%A8%E6%B3%B3%E8%A3%85-08-21">凉凉子 圣姨泳装</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
