--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -28,6 +28,6 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E6%9D%9C%E5%85%B0%E5%BE%B7%E5%B0%94-08-21">九言 杜兰德尔</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%B2%88%E5%A6%99%E6%B3%B3%E8%A3%85-08-21">九言 - 沈妙泳装</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%9F%B4%E9%83%A1%E9%83%A1-08-21">九言 - 柴郡郡</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%83%A1%E6%A1%83%E5%92%8C%E6%9C%8D-08-21">九言 胡桃（和服）</a></p>
 </body>
 </html>
