--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -40,9 +40,9 @@
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E4%BD%93%E6%93%8D%E5%AE%A4-08-21">蠢沫沫 - 体操室</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E6%B0%B4%E8%89%B2-244P2V-197GB-08-21">蠢沫沫 - 水色 [244P2V-1.97GB]</a></p>  
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---2024%E5%B9%B4%E4%BC%9A%E5%91%98-%E5%A6%B2%E5%B7%B1-39P-357MB-08-21">蠢沫沫 - 2024年会员 妲己 [39P-357MB]</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---2024%E7%A7%8B%E5%AD%A3%E4%BC%97%E7%AD%B9-70P-563MB-08-21">蠢沫沫 - 2024秋季众筹 [70P-563MB]</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%91%E5%B2%A9%E5%B0%84%E6%89%8B-08-21">蠢沫沫 - 黑岩射手</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---2024%E5%B9%B4%E4%BC%9A%E5%91%98%E7%BB%B3-23P-245MB-08-21">蠢沫沫 - 2024年会员《绳》 [23P-245MB]</a></p>  
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
