--- a/byoru全集/menu.html
+++ b/byoru全集/menu.html
@@ -23,5 +23,35 @@
   <p><a href="https://telegra.ph/Byoru---Momo-Ayase-08-20">Byoru - Momo Ayase</a></p>
   <p><a href="https://telegra.ph/Byoru---Xmas-Gal-08-20">Byoru - Xmas Gal</a></p>
   <p><a href="https://telegra.ph/Byoru---Mavuika-08-20">Byoru - Mavuika</a></p>
+  <p><a href="https://telegra.ph/Byoru---Mary-Bunny-63P19V-08-21">Byoru - Mary Bunny 63P+19V</a></p>
+  <p><a href="https://telegra.ph/Byoru---Nicole-58P15V-08-21">Byoru - Nicole 58P15V</a></p>
+  <p><a href="https://telegra.ph/Byoru---Albedo-47P16V-08-21">Byoru - Albedo 47P16V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
