--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -42,7 +42,8 @@
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E8%93%9D%E7%99%BD%E6%9D%A1%E5%B0%91%E5%A5%B3-81P-807MB-08-21">玉汇 - 蓝白条少女 [81P-807MB]</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E6%B0%B4%E4%B8%AD%E8%8A%B1-79P-482MB-08-21">玉汇 - 水中花 [79P-482MB]</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E7%97%B4%E5%A5%B3%E6%97%A5%E8%AE%B0-104P-098GB-08-21">玉汇 - 痴女日记 [104P-0.98GB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-Set-A---Tifa-Dress-08-21">玉汇 Set A - Tifa Dress</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-Set-B---Gymnastics-Girl-08-21">玉汇 Set B - Gymnastics Girl</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
