--- a/咬一口兔娘全集/menu.html
+++ b/咬一口兔娘全集/menu.html
@@ -57,10 +57,10 @@
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98-9%E6%9C%88%E4%BD%9C%E5%93%81%E6%98%8E%E6%97%A5%E9%A6%99%E7%89%B9%E6%AE%8A%E4%BD%9C%E6%88%9881P1V-%E6%8B%BE%E5%85%89%E7%8B%AC%E7%99%BD-08-21">咬一口兔娘 9月作品『明日香特殊作战』81P+1V 拾光独白</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98-9%E6%9C%88%E4%BD%9C%E5%93%81%E6%A2%A6%E4%B8%AD%E7%9A%84%E5%A9%9A%E7%A4%BC72P1V-%E5%8B%BE%E6%8C%87%E8%B5%B7%E8%AA%93-08-21">咬一口兔娘 9月作品『梦中的婚礼』72P+1V 勾指起誓</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98-9%E6%9C%88%E4%BD%9C%E5%93%81%E5%A6%AE%E5%8F%AF%E4%B8%89%E7%99%BE%E7%AA%9F130P1V-Shake-it-08-21">咬一口兔娘 9月作品『妮可三百窟』130P+1V Shake it</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98ovo-8%E6%9C%88%E6%9C%88%E7%A5%A8%E7%89%B9%E5%85%B8%E5%BF%83%E7%81%B5%E7%96%97%E6%84%88%E5%B8%8843P1V-%E9%87%8E%E7%8B%BCDisco-08-21">咬一口兔娘ovo 8月月票特典『心灵疗愈师』43P+1V 野狼Disco</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98ovo-7%E6%9C%88%E6%9C%88%E7%A5%A8%E4%B8%93%E5%B1%9E%E7%89%B9%E5%85%B8%E9%BB%91%E5%87%A4%E6%A2%A842P1V-MINISKIRT-08-21">咬一口兔娘ovo 7月月票专属特典『黑凤梨』42P+1V MINISKIRT</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98-7%E6%9C%88%E4%BD%9C%E5%93%81%E8%BF%B7%E5%AE%AB%E8%8F%87%E7%94%9F%E9%A3%9F%E6%8C%87%E5%8D%9774P1V-%E5%B0%8F%E9%B9%BF%E4%B9%B1%E6%92%9E-08-21">咬一口兔娘 7月作品『迷宫菇生食指南』74P+1V 小鹿乱撞</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98ovo-7%E6%9C%88%E4%BD%9C%E5%93%81%E8%87%AA%E5%8A%A9%E6%B4%97%E8%A1%A3%E6%88%BF73P1V-%E6%80%A6%E7%84%B6%E5%BF%83%E5%8A%A8-08-21">咬一口兔娘ovo 7月作品『自助洗衣房』73P+1V 怦然心动</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
