--- a/奈汐酱nice全集/menu.html
+++ b/奈汐酱nice全集/menu.html
@@ -36,6 +36,11 @@
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E9%86%89%E5%9B%9E%E7%8B%AC%E5%B1%85-65P1V-127GB-08-21">奈汐酱nice - 醉回独居 [65P1V-1.27GB]</a></p>
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E5%8F%A4%E9%A3%8E%E9%9D%92%E7%BA%B1%E6%9B%A6-70P-127GB%E6%B1%89%E6%9C%8D-08-21">奈汐酱nice - 古风青纱曦 [70P-1.27GB](汉服)</a></p>
   <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83%E5%A5%88%E6%B1%90%E9%85%B1nice%E4%B8%83%E6%9C%88%E5%96%B5%E5%AD%90-%E5%A4%8F%E6%97%A5-130P1V-219GB-08-21">云溪溪 - &奶桃&奈汐酱nice&七月喵子 夏日 [130P1V-2.19GB]</a></p>
+  <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83%E6%A1%83%E5%A5%88%E6%B1%90%E9%85%B1nice-%E5%8D%B1%E9%99%A9%E6%B8%B8%E6%88%8F-132P1V-08-21">云溪溪 - 奶桃桃&奈汐酱nice 危险游戏 132P1V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
