--- a/疯猫ss全集/menu.html
+++ b/疯猫ss全集/menu.html
@@ -13,8 +13,8 @@
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss---%E4%BA%B2%E7%88%B1%E7%9A%84520-%E8%B0%83%E6%83%85%E6%81%B6%E9%AD%94-72P-466M-08-19">疯猫ss - 亲爱的520 调情恶魔 [72P-466M]</a></p> 
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABSS---2b-53P-715M-08-20">疯猫SS - 2b [53P-715M]</a></p>
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss---%E5%B0%91%E5%A5%B3%E8%A1%A3%E6%A9%B1-%E8%A5%BF%E8%A3%85%E8%A3%A4-41P-284MB-08-20">疯猫ss - 少女衣橱 西装裤 [41P-284MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E9%BB%91%E8%89%B2%E6%83%85%E8%B6%A3%E5%86%85%E8%A1%A3-40P2V-08-21">疯猫ss 黑色情趣内衣 40P2V</a></p>
+  <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E5%B0%91%E5%A5%B3%E8%A1%A3%E6%A9%B1-%E8%BF%9E%E4%BD%93%E5%A5%B3%E4%BB%86%E8%A3%85-58P-08-21">疯猫ss 少女衣橱 连体女仆装 58P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
