--- a/Quan冉有点饿(拖拉大王)全集/menu.html
+++ b/Quan冉有点饿(拖拉大王)全集/menu.html
@@ -22,9 +22,9 @@
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E7%88%B1%E4%B8%BD%E4%B8%9D-47P-321MB-08-21">Quan冉有点饿 - 爱丽丝 [47P-321MB]</a></p>  
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E5%88%9D%E9%9F%B3%E9%85%B1-32P-259MB-08-21">Quan冉有点饿 - 初音酱 [32P-259MB]</a></p>
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF-%E6%8B%96%E6%8B%89%E5%A4%A7%E7%8E%8B----%E6%A8%8B%E5%8F%A3%E5%9C%86%E9%A6%99-44P-592MB-08-21">Quan冉有点饿 (拖拉大王_) - 樋口圆香 [44P-592MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E5%B4%A9%E5%9D%8F-%E6%98%9F%E7%A9%B9%E9%93%81%E9%81%93-%E8%8A%B1%E7%81%AB-62P-08-21">Quan冉有点饿 - 崩坏 星穹铁道 花火 [62P]</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E8%8A%99%E8%8E%89%E8%8E%B2%E5%90%8C%E4%BA%BA-08-21">Quan冉有点饿 - 芙莉莲同人</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E7%8E%9B%E5%A5%87%E7%8E%9B-22P-08-21">Quan冉有点饿 - 玛奇玛 22P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
