--- a/屿鱼全集/menu.html
+++ b/屿鱼全集/menu.html
@@ -25,6 +25,12 @@
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---NIKKE-%E6%8B%89%E6%AF%97-30P-301MB-08-20">屿鱼 - NIKKE 拉毗 [30P-301MB]</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E7%8F%91-50p-08-20">屿鱼 - 珑 50p</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E8%83%A1%E6%BB%95%E8%B5%9B%E8%BD%A6-08-20">屿鱼 - 胡滕赛车</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E4%BC%98%E9%A6%99%E4%BD%93%E6%93%8D%E6%9C%8DT2-08-21">屿鱼 优香体操服T2</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E6%8B%89%E4%BC%B8%E6%95%99%E5%AD%A648pt3-08-21">屿鱼 拉伸教学48pt3</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E8%83%A1%E6%BB%95%E8%B5%9B%E8%BD%A6-41P-08-21">屿鱼 碧蓝航线 胡滕赛车 41P</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
