--- a/布丁全集/menu.html
+++ b/布丁全集/menu.html
@@ -32,11 +32,11 @@
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-Perohub-9%E6%9C%88%E8%AE%A2%E9%98%85-%E5%A7%AC%E9%87%8E%E5%89%8D%E8%BE%88-08-20">布丁大法 Perohub-9月订阅 姬野前辈</a></p>
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95---Perohub-9%E6%9C%88%E8%AE%A2%E9%98%85-%E7%99%BD%E6%AF%9B%E5%A5%B3%E5%8F%8B-08-20">布丁大法 - Perohub-9月订阅 白毛女友</a></p>
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95---Perohub-9%E6%9C%88%E8%AE%A2%E9%98%85-08-20">布丁大法 - Perohub 9月订阅</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-%E7%BD%91%E8%A2%9C%E5%A7%90%E5%A7%90-08-21">布丁 网袜姐姐</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-%E9%80%8F%E6%98%8E%E8%BF%9E%E4%BD%93%E8%A1%A3%E8%A3%B8-08-21">布丁 透明连体衣（裸）</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-%E8%A6%86%E7%9B%86%E5%AD%90%E8%93%9D%E7%99%BD%E6%9D%A1%E7%BA%B9%E5%96%B5-08-21">布丁 覆盆子蓝白条纹喵</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-%E8%A6%86%E7%9B%86%E5%AD%90%E7%9C%BC%E9%95%9C%E5%A8%98-08-21">布丁 覆盆子眼镜娘</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-%E4%B8%AD%E5%8D%8E%E5%A8%98-08-21">布丁 中华娘</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
