--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -41,10 +41,10 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---Aqua-Summer-75P-140MB-08-20">水淼aqua - Aqua Summer 75P 140MB</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua---%E3%83%95%E3%82%A1%E3%82%A4%E3%83%8A%E3%83%AB%E3%83%95%E3%82%A1%E3%83%B3%E3%82%BF%E3%82%B8%E3%83%BCVII-%E3%83%86%E3%82%A3%E3%83%95%E3%82%A1%E3%83%AD%E3%83%83%E3%82%AF%E3%83%8F%E3%83%BC%E3%83%88-81P-110MB-08-21">水淼Aqua - ファイナルファンタジーVII　ティファ・ロックハート [81P-110MB]</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---%E3%82%BC%E3%83%B3%E3%83%AC%E3%82%B9%E3%82%BE%E3%83%B3%E3%82%BC%E3%83%AD-%E3%83%8B%E3%82%B3%E3%83%87%E3%83%9E%E3%83%A9-66P-811MB-08-21">水淼aqua - ゼンレスゾンゼロ　ニコ・デマラ [66P-81.1MB]</a></p>
-<p><a href="../index.html">返回总目录</a></p>
-<p><a href="../index.html">返回总目录</a></p>
-<p><a href="../index.html">返回总目录</a></p>
-<p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-C103%E4%B8%80%E4%B9%8B%E6%BF%91%E6%98%8E%E6%97%A5%E5%A5%88A-08-21">水淼Aqua C103一之濑明日奈A</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-C103%E4%B8%80%E4%B9%8B%E6%BF%91%E6%98%8E%E6%97%A5%E5%A5%88B-08-21">水淼Aqua C103一之濑明日奈B</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-C104%E7%92%83%E6%9C%88-08-21">水淼Aqua C104璃月(原神)</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-C104%E7%A8%BB%E5%A6%BB-08-21">水淼Aqua C104稻妻(原神)</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 <p><a href="../index.html">返回总目录</a></p>
