--- a/絞肉姬Walküre全集/menu.html
+++ b/絞肉姬Walküre全集/menu.html
@@ -15,6 +15,13 @@
   <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre---%E9%AA%B8%E9%9F%B3%E5%9B%9A%E4%BA%BA%E4%B8%8E%E7%BA%B8%E9%A3%9E%E6%9C%BA-08-20">絞肉姬Walküre - 骸音囚人与纸飞机</a></p>
   <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre---%E5%AE%9D%E5%A4%9A%E5%85%AD%E8%8A%B1%E6%A0%A1%E6%9C%8D-41P-08-20">絞肉姬Walküre - 宝多六花校服 41P</a></p>
   <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre---202409-%E7%89%A7%E6%BF%91%E7%BA%A2%E8%8E%89%E6%A0%96-08-20">絞肉姬Walküre - 2024.09 牧濑红莉栖</a></p>
+  <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre-%E6%98%8E%E6%97%A5%E6%96%B9%E8%88%9FW%E6%84%9A%E5%A4%9C%E5%AF%86%E5%87%BD-08-21">絞肉姬Walküre 明日方舟W愚夜密函</a></p>
+  <p><a href="https://telegra.ph/%E6%AF%94%E5%A5%87%E5%A0%A1%E9%BB%84%E5%A1%9E%E6%96%B9%E5%9D%97-%E7%94%98%E9%9B%A8%E7%8E%89%E6%A1%82%E7%8B%97-08-21">比奇堡黄塞方块 甘雨玉桂狗</a></p>
+  <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre-%E5%96%9C%E5%A4%9A%E5%B7%9D%E6%B5%B7%E6%A2%A6-08-21">絞肉姬Walküre 喜多川海梦</a></p>
+  <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre-%E8%8A%BD%E4%BA%9A%E9%87%8C%E5%85%94%E5%A5%B3%E9%83%8E-08-21">絞肉姬Walküre 芽亚里兔女郎</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
