--- a/迷之呆梨全集/menu.html
+++ b/迷之呆梨全集/menu.html
@@ -14,5 +14,10 @@
   <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8---%E5%B9%BD%E7%81%B5%E5%A8%98-40P587MB-08-20">迷之呆梨 - 幽灵娘 40P587MB</a></p>
   <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8---Blue%E8%93%9D%E8%89%B2-42P302MB-08-20">迷之呆梨 - Blue蓝色 42P302MB</a></p>
   <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8---%E4%BB%8A%E6%97%A5%E3%81%AF%E4%BF%AE%E9%81%93%E5%A5%B3-37P-235MB-08-20">迷之呆梨 - 今日は修道女 37P 235MB</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8---2024%E5%B9%B408%E6%9C%88-Fantia-08-21">迷之呆梨 - 2024年08月 Fantia</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
