--- a/麻花酱全集/menu.html
+++ b/麻花酱全集/menu.html
@@ -23,6 +23,12 @@
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E7%94%9F%E5%8C%96%E5%8D%B1%E6%9C%BA-%E8%89%BE%E8%BE%BE%E7%8E%8B-38P1V-515MB-08-21">麻花酱 - 生化危机 艾达王 [38P1V-515MB]</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E9%AC%BC%E7%81%AD%E4%B9%8B%E5%88%83-%E7%94%98%E9%9C%B2%E5%AF%BA-22P1V-395MB-08-21">麻花酱 - 鬼灭之刃 甘露寺 [22P1V-395MB]</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E5%9F%83%E5%90%89%E5%B0%94-28P1V-439MB-08-21">麻花酱 - 碧蓝航线 埃吉尔 [28P1V-439MB]</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1-%E9%97%B4%E8%B0%8D%E8%BF%87%E5%AE%B6%E5%AE%B6-%E7%BA%A6%E5%B0%9445P3V-08-21">麻花酱 间谍过家家 约尔45P3V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
