--- a/樱梨梨全集/menu.html
+++ b/樱梨梨全集/menu.html
@@ -10,7 +10,7 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%A8%B1%E6%A2%A8%E6%A2%A8---%E9%9B%8F%E7%94%B0%E7%9A%84%E5%A9%9A%E5%90%8E%E7%94%9F%E6%B4%BB-28P-115MB-08-21">樱梨梨 - 雏田的婚后生活 [28P-115MB](火影)</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%A8%B1%E6%A2%A8%E6%A2%A8-%E8%8E%AB%E5%A8%9C%E5%A5%B3%E4%BB%86-34P-08-21">樱梨梨 莫娜女仆 34P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
