--- a/封疆疆全集/menu.html
+++ b/封疆疆全集/menu.html
@@ -20,6 +20,6 @@
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E5%B0%8F%E6%81%B6%E9%AD%94-30P-316MB-08-21">封疆疆 - 小恶魔 [30P-316MB]</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6-%E5%A5%B3%E4%BB%86-28P-312MB-08-21">封疆疆 - 飞鸟马时 女仆 [28P-312MB]</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86v-%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6Toki-40P-08-21">封疆疆v 飞鸟马时Toki 40P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86v-%E6%A8%B1%E5%B2%9B%E9%BA%BB%E8%A1%A3%E5%85%94%E5%A5%B3%E9%83%8E-40P-08-21">封疆疆v 樱岛麻衣兔女郎 40P</a></p>
 </body>
 </html>
