--- a/小和甜酒全集/menu.html
+++ b/小和甜酒全集/menu.html
@@ -11,10 +11,10 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92---%E7%99%BD%E5%A4%A9%E9%B9%85%E5%A4%96%E5%8D%96-93P-1G-08-19">小和甜酒 - 白天鹅外卖 [93P-1G]</a></p> 
   <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92%E6%A9%99%E9%A3%8E%E5%8D%83%E9%9B%85-%E9%AD%94%E5%A5%B3%E7%8C%AB%E5%92%AA-118P-751MB-08-21">小和甜酒&橙风千雅 魔女猫咪 [118P-751MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92-%E6%A5%AA%E7%A5%88-59P1V-08-21">小和甜酒 楪祈 59P1V</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92-%E9%B8%AD%E9%B8%AD%E5%B9%BC%E7%A8%9A%E5%9B%AD-170P2V-08-21">小和甜酒 鸭鸭幼稚园 170P2V</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92-%E4%BA%A4%E9%94%99%E6%88%98%E7%BA%BF%E7%BB%AF%E4%BF%90-47P2V-08-21">小和甜酒 交错战线绯俐 47P2V</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92-%E5%A6%83%E5%92%B2-195P1V-08-21">小和甜酒 妃咲 195P1V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
