--- a/星之迟迟全集/menu.html
+++ b/星之迟迟全集/menu.html
@@ -31,7 +31,6 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-8-A-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF%E6%9F%B4%E9%83%A1-08-20l">星之迟迟 2024-8-A 碧蓝航线—柴郡</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-8-B-%E6%AD%BB%E6%88%96%E7%94%9F%E7%8E%9B%E4%B8%BD%E8%90%9D%E4%B8%9D-08-20">星之迟迟 2024-8-B 死或生—玛丽萝丝</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-8-C-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF%E8%8E%AB%E5%8A%A0%E5%A4%9A%E5%B0%94-08-20">星之迟迟 2024-8-C 碧蓝航线—莫加多尔</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-8-E-%E5%A2%9E%E5%88%8A-%E6%81%B0%E5%B7%B4%E8%80%B6%E5%A4%AB%E7%A4%BC%E6%9C%8D-08-20">星之迟迟 2024-8-E 增刊-恰巴耶夫礼服</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-8-F-%E5%A2%9E%E5%88%8A-%E9%95%87%E6%B5%B7%E6%BD%8B%E6%BB%9F%E6%B0%B4%E8%89%B2-08-20">星之迟迟 2024-8-F 增刊-镇海潋滟水色</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-8-G-%E6%86%A7%E6%86%AC%E6%88%90%E4%B8%BA%E9%AD%94%E6%B3%95%E5%B0%91%E5%A5%B3%E9%98%BF%E8%89%AF%E6%B2%B3%E5%9F%BA%E7%BB%B4-08-20">星之迟迟 2024-8-G 憧憬成为魔法少女—阿良河基维</a></p>
@@ -39,8 +38,13 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-8-BA-Erotopia-08-20-2">星之迟迟 2024-8-BA Erotopia! 2</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-8-BA-Erotopia-08-20-3">星之迟迟 2024-8-BA Erotopia! 3</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-8-BA-Erotopia-08-20-4">星之迟迟 2024-8-BA Erotopia! 4</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-5-A-08-21">星之迟迟 2024-5-A</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-5-B-08-21">星之迟迟 2024-5-B</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-5-C-08-21">星之迟迟 2024-5-C</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-5-D-08-21">星之迟迟 2024-5-D</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-5-D-2-08-21">星之迟迟 2024-5-D 2</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>   
 </body>
 </html>
