--- a/桜井宁宁全集/menu.html
+++ b/桜井宁宁全集/menu.html
@@ -32,7 +32,7 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E6%B7%AB%E7%BA%B9%E5%A5%B3%E5%B7%AB-62P1V-278GB-08-21">桜井宁宁 - 淫纹女巫 [62P1V-2.78GB]</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---2024%E5%B9%B407%E6%9C%88%E8%87%AA%E6%8B%8D%E5%9B%BE%E5%8C%85-43P1V-355MB-08-21">桜井宁宁 - 2024年07月自拍图包 [43P1V-355MB]</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E5%B0%8F%E7%BA%A2%E5%B8%BD-70P-313GB-08-21">桜井宁宁 - 小红帽 [70P-3.13GB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E4%B8%AD%E5%8D%8E%E5%B0%8F%E5%A8%98%E5%AD%90-72P-365GB-08-21">桜井宁宁 中华小娘子 [72P-3.65GB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
