--- a/疯猫ss全集/menu.html
+++ b/疯猫ss全集/menu.html
@@ -15,8 +15,8 @@
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss---%E5%B0%91%E5%A5%B3%E8%A1%A3%E6%A9%B1-%E8%A5%BF%E8%A3%85%E8%A3%A4-41P-284MB-08-20">疯猫ss - 少女衣橱 西装裤 [41P-284MB]</a></p>
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E9%BB%91%E8%89%B2%E6%83%85%E8%B6%A3%E5%86%85%E8%A1%A3-40P2V-08-21">疯猫ss 黑色情趣内衣 40P2V</a></p>
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E5%B0%91%E5%A5%B3%E8%A1%A3%E6%A9%B1-%E8%BF%9E%E4%BD%93%E5%A5%B3%E4%BB%86%E8%A3%85-58P-08-21">疯猫ss 少女衣橱 连体女仆装 58P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E6%A8%8B%E5%8F%A3%E5%86%86%E9%A6%99-39P-08-21">疯猫ss 樋口円香 39P</a></p>
+  <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E4%B8%83%E4%B8%89%E7%89%B9%E5%B7%A5-48P-08-21">疯猫ss 七三特工 48P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
